--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2386,7 +2386,7 @@ then {11,99 TRY/Month}*/
 "gamification_event_trigger_count" = "%d Adet Çekiliş Hakkı Kazandın";
 "gamification_event_completed" = "Bu %@ hakkını tamamladın.";
 "gamification_total_count" = "Toplam %d Çekiliş Hakkı Kazandın.";
-"gamification_campaign_conditions" = "Kampanya Detayları";
+"gamification_campaign_conditions" = "Kampanya Koşulları";
 "gamification_rules" = "Çekiliş Hak Kazanımı";
 "gamification_campaign_policy_title" = "Kampanya Katılım Koşulları";
 "gamification_raffle_win" = "";
@@ -2420,3 +2420,4 @@ then {11,99 TRY/Month}*/
 "gamification_total_earn_point_2" = "%d çekiliş puanı";
 "right" = "";
 "rights" = "";
+"gamification_raffle_call" = "Her ay aşağıdaki özellikleri kullan, çekilişi kazanma şansını artır.";
