--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1452,7 +1452,7 @@
 "mobile_payment_open_popup_description_bold_range" = "532 532";
 "mobile_payment_open_popup_later_button" = "Later";
 "mobile_payment_open_popup_continue_button" = "Continue";
-"we_recommend" = "Recommended for You";
+"we_recommend" = "Recommended for You!";
 "show_more" = "Show features";
 "show_less" = "Show less";
 "face_recognition_package_description" = "+ Unlimited Face&Image Recognition";
