--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2313,5 +2313,5 @@ then {11,99 TRY/Month}*/
 "right" = "";
 "rights" = "";
 "gamification_raffle_call" = "Use the features below every month to increase your chances of winning the raffle.";
-"discover_tools" = "";
-"discover_campaigns" = "";
+"discover_tools" = "ხელსაწყოები";
+"discover_campaigns" = "კამპანიები";
