LB-7557 photos screen max photo selected added popup

--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2327,5 +2327,10 @@ then {11,99 TRY/Month}*/
 "right" = "";
 "rights" = "";
 "gamification_raffle_call" = "Use the features below every month to increase your chances of winning the raffle.";
+
+/*Fuzzy*/
 "discover_tools" = "Werkzeuge";
+
+/*Fuzzy*/
 "discover_campaigns" = "Kampagnen";
+"max_files_select_error" = "";
