--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2339,5 +2339,10 @@ then {11,99 TRY/Month}*/
 "right" = "";
 "rights" = "";
 "gamification_raffle_call" = "Use the features below every month to increase your chances of winning the raffle.";
+
+/*Fuzzy*/
 "discover_tools" = "أدوات";
+
+/*Fuzzy*/
 "discover_campaigns" = "الحملات";
+"max_files_select_error" = "";
