--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2313,5 +2313,10 @@ then {11,99 TRY/Month}*/
 "right" = "";
 "rights" = "";
 "gamification_raffle_call" = "Use the features below every month to increase your chances of winning the raffle.";
+
+/*Fuzzy*/
 "discover_tools" = "ხელსაწყოები";
+
+/*Fuzzy*/
 "discover_campaigns" = "კამპანიები";
+"max_files_select_error" = "";
