--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2334,3 +2334,5 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "discover_campaigns" = "Kampagnen";
 "max_files_select_error" = "";
+"instagram_login" = "";
+"can_not_sent_link_email" = "";
