--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1824,7 +1824,7 @@
 "private_share_start_page_share_success" = "Shared Successfully";
 "private_share_cancel_confirm" = "Are you sure to quit?";
 "private_share_details_page_name" = "Shared Items";
-"private_share_shared_by_me_tab" = "Shared by me";
+"private_share_shared_by_me_tab" = "Shares";
 "private_share_shared_with_me_tab" = "Shared with me";
 "private_share_info_section_name" = "Sharing Info";
 "private_share_info_number_of_people" = "Shared with %d people";
@@ -2404,3 +2404,5 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "discover_campaigns" = "Campaigns";
 "max_files_select_error" = "You can select only %d files/photos/videos.";
+"instagram_login" = "Instagram Login";
+"can_not_sent_link_email" = "";
