--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2639,3 +2639,5 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "discover_campaigns" = "Campagnes";
 "max_files_select_error" = "";
+"instagram_login" = "";
+"can_not_sent_link_email" = "";
