--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2348,3 +2348,5 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "discover_campaigns" = "Кампании";
 "max_files_select_error" = "";
+"instagram_login" = "";
+"can_not_sent_link_email" = "";
