--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2336,3 +2336,5 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "discover_campaigns" = "Кампанії";
 "max_files_select_error" = "";
+"instagram_login" = "";
+"can_not_sent_link_email" = "";
