--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -913,7 +913,7 @@ Please check I have understood the intended command here*/
 "face_image_apple_price" = "%@/%@";
 "package_apple_price" = "%@ / %@";
 "package_apple_cancel_text" = "Pour annuler votre offre, veuillez utiliser le menu iTunes & App Store de votre appareil.";
-"package_slcm_cancel_text" = "Pour annuler votre offre, envoyer \"IPTAL LIFEBOX %@\" au 2200 ";
+"package_slcm_cancel_text" = "Pour annuler votre abonnement, appelez le centre d'appel au 532.";
 "package_google_cancel_text" = "Pour annuler votre offre, veuillez utiliser Google Play Store";
 
 /*Suggested: "Please use the Contact Us menu to inform us about your request so we can process it'
@@ -2625,12 +2625,8 @@ then {11,99 TRY/Month}*/
 "winter_video_timeline_header" = "Vos Plus Beaux Souvenirs D'Hiver";
 "yearly" = "Annuel";
 "timeline_description" = "Nous vous avons préparé une surprise à partir des souvenirs que vous avez sauvegardés dans lifebox cet hiver. Découvrez-les dès maintenant.";
-"photo_max_selection_title_x" = "";
-"photo_max_selection_body_x" = "";
 "gamification_total_earn_point_1" = "You earned %@";
 "gamification_total_earn_point_2" = "%d raffle right(s)";
-"right" = "";
-"rights" = "";
 "gamification_raffle_call" = "Use the features below every month to increase your chances of winning the raffle.";
 
 /*Fuzzy*/
@@ -2638,6 +2634,7 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "discover_campaigns" = "Campagnes";
-"max_files_select_error" = "";
-"instagram_login" = "";
-"can_not_sent_link_email" = "";
+"max_files_select_error" = "Vous pouvez sélectionner un maximum de %d.";
+"instagram_login" = "Se connecter avec Instagram";
+"can_not_sent_link_email" = "Comme votre e-mail n'est pas vérifié, vous pouvez continuer avec votre numéro de téléphone.";
+"right" = "";
