--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2315,7 +2315,7 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "discover_campaigns" = "კამპანიები";
-"max_files_select_error" = "";
-"instagram_login" = "";
-"can_not_sent_link_email" = "";
+"max_files_select_error" = "შეგიძლიათ აირჩიოთ მაქსიმუმ %d.";
+"instagram_login" = "Instagram შესვლა";
+"can_not_sent_link_email" = "ვინაიდან თქვენი ელფოსტა არ არის დადასტურებული, შეგიძლიათ გააგრძელოთ თქვენი ტელეფონის ნომერი.";
 "right" = "";
