--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2375,3 +2375,5 @@ then {11,99 TRY/Month}*/
 "instagram_login" = "Iniciar sesión con Instagram";
 "can_not_sent_link_email" = "Como tu correo electrónico no está verificado, puedes continuar con tu número de teléfono.";
 "right" = "";
+"forgotmypassword_invalid_token" = "Ha ocurrido un error temporal. Inténtalo de nuevo.";
+"no_campaign_found" = "";
