--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2335,3 +2335,5 @@ then {11,99 TRY/Month}*/
 "instagram_login" = "Вхід у систему з Instagram";
 "can_not_sent_link_email" = "Оскільки ваш e-mail не підтверджено, ви можете продовжити за допомогою номера телефону.";
 "right" = "";
+"forgotmypassword_invalid_token" = "Виникла тимчасова помилка. Будь ласка, спробуйте ще раз.";
+"no_campaign_found" = "";
