--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2320,4 +2320,4 @@ then {11,99 TRY/Month}*/
 "can_not_sent_link_email" = "ვინაიდან თქვენი ელფოსტა არ არის დადასტურებული, შეგიძლიათ გააგრძელოთ თქვენი ტელეფონის ნომერი.";
 "right" = "";
 "forgotmypassword_invalid_token" = "დროებითი შეცდომა დაფიქსირდა. მოგვიანდებით სცადე.";
-"no_campaign_found" = "";
+"no_campaign_found" = "კამპანია ვერ მოიძებნა.";
