--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2334,4 +2334,4 @@ then {11,99 TRY/Month}*/
 "can_not_sent_link_email" = "Da Ihre E-Mail nicht verifiziert ist, können Sie mit Ihrer Telefonnummer fortfahren.";
 "right" = "";
 "forgotmypassword_invalid_token" = "Ein vorübergehender Fehler ist aufgetreten. Bitte versuchen Sie es erneut.";
-"no_campaign_found" = "";
+"no_campaign_found" = "Keine Kampagne gefunden.";
