--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2639,4 +2639,4 @@ then {11,99 TRY/Month}*/
 "can_not_sent_link_email" = "Comme votre e-mail n'est pas vérifié, vous pouvez continuer avec votre numéro de téléphone.";
 "right" = "";
 "forgotmypassword_invalid_token" = "Une erreur temporaire s'est produite. Veuillez réessayer.";
-"no_campaign_found" = "";
+"no_campaign_found" = "Aucune campagne trouvée.";
