--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2348,4 +2348,4 @@ then {11,99 TRY/Month}*/
 "can_not_sent_link_email" = "Поскольку ваш e-mail не подтвержден, вы можете продолжить с помощью номера телефона.";
 "right" = "";
 "forgotmypassword_invalid_token" = "Произошла временная ошибка. Пожалуйста, попробуйте еще раз.";
-"no_campaign_found" = "";
+"no_campaign_found" = "Кампания не найдена.";
