--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2377,4 +2377,4 @@ then {11,99 TRY/Month}*/
 "can_not_sent_link_email" = "Meqenëse e-maili juaj nuk është i verifikuar, mund të vazhdoni me numrin tuaj të telefonit.";
 "right" = "";
 "forgotmypassword_invalid_token" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
-"no_campaign_found" = "";
+"no_campaign_found" = "Fushata nuk u gjet.";
